<resources>
    <string name="app_name">Grocer</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="name">Name</string>
    <string name="ad_name_hint">Item Name</string>
    <string name="note">Note</string>
    <string name="ad_note_hint">Item Note</string>
    <string name="qty">Quantity</string>
    <string name="optional">Optional</string>
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>
    <string name="clear_all">Clear All</string>
    <string name="empty_list">Yay! Your shopping list is empty!</string>
    <string name="empty_list2">Click the \'+\' to add an item to the list.</string>
    <string name="grocery">Shopping List</string>
    <string name="recipe">Recipe List</string>
    <string name="help">Help</string>
    <string name="share">Share</string>
    <string name="extras">Extras</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="coming_soon">Coming Soon!</string>
    <string name="ingredients">Ingredients</string>
    <string name="recipe_name">Recipe Name</string>
    <string name="directions">Directions</string>
    <string name="prep_time">Prep Time</string>
    <string name="cook_time">Cook Time</string>
    <string name="tags">Tags</string>
    <string name="notes">Notes</string>
    <string name="sort">Sort</string>
    <string name="ok">OK</string>
    <string name="hours">Hours</string>
    <string name="minutes">Minutes</string>
    <string name="switchMode">Switch Mode</string>
</resources>
