<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_grocery"
            android:icon="@drawable/ic_add_shopping_cart"
            android:title="@string/grocery"
            android:checked="true"/>
        <item
            android:id="@+id/nav_recipe"
            android:icon="@drawable/ic_kitchen"
            android:title="@string/recipe"/>
    </group>

    <item android:title="@string/extras">
        <menu>
            <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/ic_settings"
                android:title="@string/action_settings" />
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/share" />
            <item
                android:id="@+id/nav_help"
                android:icon="@drawable/ic_help"
                android:title="@string/help"/>
        </menu>
    </item>

</menu>
