<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.github.jlcarveth.grocer.layout.fragment.AddRecipeFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="10dp">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/recipe_name"
            android:inputType="textCapWords"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/dar_ingredients"
            android:text="@string/ingredients"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/dar_directions"
            android:text="@string/directions"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:id="@+id/dar_prep"
                android:layout_weight="1"
                android:text="@string/prep_time"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:id="@+id/dar_cook"
                android:layout_weight="1"
                android:text="@string/cook_time"/>
        </LinearLayout>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/dar_tags"
            android:text="@string/tags"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/dar_notes"
            android:hint="@string/notes"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/dar_create"
            android:text="Create"
            android:background="@color/colorPrimaryDark"
            android:textColor="#FFF"/>

    </LinearLayout>

</FrameLayout>
